Fix content width issues on mobile phones
Removing unnecessary css code did the job.

--- a/css/main.scss
+++ b/css/main.scss
@@ -23,33 +23,14 @@ $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
-// Width of the content area
-$content-width:    800px;
-
 $on-palm:          600px;
 $on-laptop:        800px;
-
-
-
-// Use media queries like this:
-// @include media-query($on-palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
-@mixin media-query($device) {
-    @media screen and (max-width: $device) {
-        @content;
-    }
-}
 
 
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "base",
-        "layout",
         "syntax-highlighting"
 ;
 
@@ -59,31 +40,8 @@ $on-laptop:        800px;
 @import 'fontawesome/scss/solid';
 @import 'fontawesome/scss/brands';
 
-html {
-  position: relative;
-  height: 100%;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  min-height: 100%;
-  background-color: #ffffff;
-}
-
 .blog-content {
-  flex: 1 0 auto; /* 2 */
-  padding: 0;
-  width: 100%;
-}
-
-.blog-content::after {
-  content: '\00a0'; /* &nbsp; */
-  display: block;
-  margin-top: 0;
-  height: 0;
-  visibility: hidden;
+  word-break: break-word;
 }
 
 .sk-logo img {
